[package]
name = "joke_bot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ruma = { version = "0.13.0", features = ["client-api-c", "rand"] }
ruma-client = { version = "0.16.0", features = ["client-api", "hyper-native-tls"] }
# For building locally: use the git dependencies below.
#
# Browse the source at this revision here: https://github.com/ruma/ruma/tree/bb825c7280a4b49302e74ecd89e8a4c5c37e9a36
# ruma = { git = "https://github.com/ruma/ruma", rev = "bb825c7280a4b49302e74ecd89e8a4c5c37e9a36", features = ["client-api-c", "rand"] }
#
# Browse the source at this revision here: https://github.com/ruma/ruma-client/tree/464eda0e196a9a43c85db12734693e0c99214e69
# ruma-client = { git = "https://github.com/ruma/ruma-client", rev = "464eda0e196a9a43c85db12734693e0c99214e69", features = ["client-api", "hyper-native-tls"] }

futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client-legacy", "http1", "http2", "tokio"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
