[package]
name = "joke_bot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ruma = { version = "0.16.0", features = ["client-api-c", "rand"] }
ruma-client = { version = "0.19.0", features = ["client-api", "hyper-native-tls"] }

futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
http-body-util = "0.1.1"
hyper = "1.3.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
