[package]
name = "message_log"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ruma-client = { version = "0.18.0", features = ["client-api", "hyper-native-tls"] }

anyhow = "1.0.37"
tokio = { version = "1.0.1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.1", default-features = false }
